--- a/requirements.txt
+++ b/requirements.txt
@@ -4,13 +4,11 @@ attrs==22.2.0
 build==0.10.0
 CacheControl==0.12.11
 certifi==2022.12.7
-cffi==1.15.1
 charset-normalizer==3.1.0
 cleo==2.0.1
 click==8.1.7
 colorama==0.4.6
 crashtest==0.4.1
-cryptography==39.0.2
 distlib==0.3.6
 dulwich==0.21.3
 fastapi==0.115.4
@@ -50,7 +48,7 @@ pydantic_core==2.23.4
 pyproject_hooks==1.0.0
 pyrsistent==0.19.3
 pytest==8.3.3
-python_avatars==1.4.1
+py-avataaars==1.1.2
 pywin32-ctypes==0.2.3
 rapidfuzz==2.15.1
 requests==2.28.2
